--- a/my_site/p_library/templates/authors_list.html
+++ b/my_site/p_library/templates/authors_list.html
@@ -8,7 +8,7 @@
         <ul>
             {% for author in object_list %}
                 <li>{{ author.full_name }}</li>
-            {{% endfor %}}
+            {% endfor %}
         </ul>
     </body>
 
