added author_lkist and author_create to navbar

--- a/my_site/p_library/templates/base.html
+++ b/my_site/p_library/templates/base.html
@@ -25,6 +25,15 @@
               <li class="nav-item">
                 <a class="nav-link" href="\publishers">Издательства</a>
               </li>
+              
+              <li class="nav-item">
+                <a class="nav-link" href="\author\create">Создать/редактировать Авторов</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="\authors">Список авторов</a>
+              </li>
+            </ul>
+            <ul>
               <li class="nav-item">
                 <a class="nav-link" href="\admin">Админка</a>
               </li>
