--- a/my_site/p_library/templates/author_edit.html
+++ b/my_site/p_library/templates/author_edit.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>  
-<html lang="en">  
-<head>  
-	<meta charset="UTF-8">  
-	<title>Форма создания и редактирования Авторов</title>  
-</head>  
-<body>  
+{% extends "base.html" %}
+{% block page_title %}
+	Форма создания и редактирования Авторов
+{% endblock %}
+  
+{% block content %} 
 <form method="post">  
 	{% csrf_token %}  
 	{{ form.as_p }}  
 	<input type="submit" value="Сохранить">  
 </form>  
-</body>  
-</html>
+{% endblock %}
